[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-cache-layer"
version = "0.1.0"
description = "Sub-millisecond semantic memory retrieval for stateless agent skills"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "skill-cache",
    "semantic-caching",
    "agent-cache",
    "llm-optimization",
    "fast-retrieval",
    "skill-execution",
    "stateless-agents",
    "api-cost-reduction"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/skill-cache-layer"
Documentation = "https://github.com/avasis-ai/skill-cache-layer#readme"
Repository = "https://github.com/avasis-ai/skill-cache-layer.git"
Issues = "https://github.com/avasis-ai/skill-cache-layer/issues"

[project.scripts]
skill-cache-layer = "skill_cache_layer.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_cache_layer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
